bugfix: layout change of two buttons in the edit item field
two items were not aligned in the edit item field.  this was caused
by a misplaced ending </div> tag.  Once rearranged the layout displayed properly.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -27,6 +27,7 @@ h3 {
 ul {
 	list-style-type: none;
 }
+
  p {
  	font-family: Roboto, Helvetica, Arial, sans-serif;
  	font-size: 16px;
@@ -149,6 +150,11 @@ ul {
 	margin: 20px;
 	margin-left: -20px;
 }
+
+.container {
+	padding: 10px;
+}
+
 .menu-price {
 	font-weight: 700;
 }
